tests/ui/derive_bitfield_specifier/non_power_of_two.stderr
error: BitfieldSpecifier expected a number of variants which is a power of 2, specify #[bits = 2] if that was your intent
  --> tests/ui/derive_bitfield_specifier/non_power_of_two.rs:11:1
   |
11 | pub enum Bad {
   | ^^^
